[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "`unionfind` is a package for unionfind."
homepage = "https://github.com/SaitoTsutomu/unionfind"
license = "Apache-2.0"
name = "unionfind"
readme = "README.rst"
version = "0.2.0"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11"
pytest = "^8.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
